<resources>
    <string name="app_name">美客美聚</string>

    <string name="no_network_tips">您的网络不给力，请稍后重试</string>

    <!--shopfragment titlebar-->
    <string name="home_titleBar_saoyisao">扫一扫</string>
    <string name="home_titleBar_xiaoxi">消 息</string>
    <string name="home_titleBar_search">寻找商品</string>
    <string name="home_titleBar_searchShop">搜索商户</string>
    <string name="home_titleBar_location">常州</string>
    <!--app bottombar-->
    <string name="bottomBar1">商城</string>
    <string name="bottomBar2">附近</string>
    <string name="bottomBar3">购物车</string>
    <string name="bottomBar4">我的</string>

    <string name="tejia">每日特价</string>
    <string name="hotSell">热销单品</string>

    <string name="betterShop">本周优选</string>


    <string name="me_pending_payment">待付款</string>
    <string name="me_wait_for_delivery">待发货</string>
    <string name="me_receiving_goods">待收货</string>
    <string name="me_pending_evaluation">待评价</string>
    <string name="me_sale_refund">退款/售后</string>

    <string name="me_sale_message">消息</string>
    <string name="me_sale_location">我的地址</string>
    <string name="me_sale_tuijian">推荐APP</string>
    <string name="me_sale_kefu">客服</string>
    <string name="me_sale_setting">设置</string>
    <string name="me_setting_male">男</string>
    <string name="me_setting_female">女</string>


</resources>
