<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_bottom"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="@color/white"
    android:baselineAligned="true"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">

        <RelativeLayout
            android:id="@+id/rl_shop"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/ib_shop"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_shop"
                />

            <TextView
                android:id="@+id/tv_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_shop"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/bottomBar1"
                android:textColor="@drawable/select_blowntv_color"
                android:textSize="12sp"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_near"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/ib_near"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_fujin"
                />

            <TextView
                android:id="@+id/tv_near"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_near"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/bottomBar2"
                android:textColor="@drawable/select_blowntv_color"
                android:textSize="12sp"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_shopcar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/ib_shopcar"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_shopcar"
                />

            <TextView
                android:id="@+id/tv_shopcar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_shopcar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/bottomBar3"
                android:textColor="@drawable/select_blowntv_color"
                android:textSize="12sp"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="3dp">

        <ImageView
            android:id="@+id/ib_my"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:scaleType="centerInside"
            android:src="@drawable/tab_my"
            />

        <TextView
            android:id="@+id/tv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ib_my"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/bottomBar4"
            android:textColor="@drawable/select_blowntv_color"
            android:textSize="12sp"/>
    </RelativeLayout>
</LinearLayout>
