<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/appBackbroud"
    >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/appRed"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/arrow_down"
            android:gravity="center"
            android:text="@string/home_titleBar_location"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/search_home_shape"
            android:clickable="true"
            >

            <TextView
                android:id="@+id/tv_titlebar_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/titlebar_search"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/home_titleBar_searchShop"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_xiaoxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:clickable="true"
            android:drawableTop="@drawable/titlebar_xiaoxi"
            android:gravity="center"
            android:text="@string/home_titleBar_xiaoxi"
            android:textColor="@color/white"
            android:textSize="13sp"/>
    </LinearLayout>


    <net.yumig.mkmj.widget.MyScrollview
        android:id="@+id/sv_near"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:scrollbars="none"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:indicator_height="10dp"
                app:indicator_margin="5dp"
                app:indicator_width="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                >

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/ll_dot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"/>
            </RelativeLayout>

            <!--本周优选 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                >

                <TextView
                    android:id="@+id/tv_tejia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:text="@string/betterShop"
                    android:textSize="16sp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_youxuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_tejia"
                    android:background="@color/white"
                    android:scrollbars="none"/>


            </RelativeLayout>

        </LinearLayout>
    </net.yumig.mkmj.widget.MyScrollview>

</RelativeLayout>